src/NMF_err_154533.log
  File "/home-mscluster/tmazarura/HonoursResearch/src/NMF.py", line 27
    <<<<<<< HEAD
    ^^
SyntaxError: invalid syntax
  File "/home-mscluster/tmazarura/HonoursResearch/src/NMF.py", line 27
    <<<<<<< HEAD
    ^^
SyntaxError: invalid syntax
  File "/home-mscluster/tmazarura/HonoursResearch/src/NMF.py", line 27
    <<<<<<< HEAD
    ^^
SyntaxError: invalid syntax
  File "/home-mscluster/tmazarura/HonoursResearch/src/NMF.py", line 27
    <<<<<<< HEAD
    ^^
SyntaxError: invalid syntax
